.antlr/gramaticaParser.java
// Generated from /home/tcc/Projetos/compilador/gramatica.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, START=2, NUM_INT=3, NUM_FLOAT=4, STRING=5, CHAR=6, L_CHAVE=7, 
		R_CHAVE=8, L_PARENTESE=9, R_PARENTESE=10, VIRGULA=11, PONTOV=12, AND=13, 
		OR=14, NOT=15, IGUAL=16, DIFF=17, MENOR=18, MAIOR=19, MAIOR_IGUAL=20, 
		MENOR_IGUAL=21, SOMA=22, SUBTRACAO=23, MULTIPLICACAO=24, DIVISAO=25, RECEBA=26, 
		IF=27, ELSE=28, WHILE=29, RETURN=30, NEW=31, TK_INT=32, TK_FLOAT=33, TK_STRING=34, 
		TK_CHAR=35, CLASS=36, PRINT=37, SCAN=38, ID=39, ESPACO=40, COMENTARIO=41;
	public static final int
		RULE_programa = 0, RULE_declaracaoClasse = 1, RULE_corpoClasse = 2, RULE_blocoStart = 3, 
		RULE_bloco = 4, RULE_comando = 5, RULE_declaracaoVariavel = 6, RULE_atribuicao = 7, 
		RULE_estruturaWhile = 8, RULE_estruturaIf = 9, RULE_estruturaElsif = 10, 
		RULE_estruturaElse = 11, RULE_condicao = 12, RULE_condicaoAnd = 13, RULE_condicaoNot = 14, 
		RULE_condicaoPrimaria = 15, RULE_operadorComparacao = 16, RULE_novaInstancia = 17, 
		RULE_expressao = 18, RULE_expressaoSoma = 19, RULE_expressaoProduto = 20, 
		RULE_expressaoPrimaria = 21, RULE_comandoPrint = 22, RULE_comandoScan = 23, 
		RULE_declaracaoFuncao = 24, RULE_parametros = 25, RULE_parametro = 26, 
		RULE_blocoFuncao = 27, RULE_comandoRetorno = 28, RULE_chamadaFuncao = 29, 
		RULE_argumentos = 30, RULE_acesso = 31, RULE_tipo = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracaoClasse", "corpoClasse", "blocoStart", "bloco", 
			"comando", "declaracaoVariavel", "atribuicao", "estruturaWhile", "estruturaIf", 
			"estruturaElsif", "estruturaElse", "condicao", "condicaoAnd", "condicaoNot", 
			"condicaoPrimaria", "operadorComparacao", "novaInstancia", "expressao", 
			"expressaoSoma", "expressaoProduto", "expressaoPrimaria", "comandoPrint", 
			"comandoScan", "declaracaoFuncao", "parametros", "parametro", "blocoFuncao", 
			"comandoRetorno", "chamadaFuncao", "argumentos", "acesso", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'start'", null, null, null, null, "'{'", "'}'", "'('", 
			"')'", "','", "';'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'>'", 
			"'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'='", "'if'", "'else'", 
			"'while'", "'return'", "'new'", "'int'", "'float'", "'string'", "'char'", 
			"'class'", "'printf'", "'scanf'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "START", "NUM_INT", "NUM_FLOAT", "STRING", "CHAR", "L_CHAVE", 
			"R_CHAVE", "L_PARENTESE", "R_PARENTESE", "VIRGULA", "PONTOV", "AND", 
			"OR", "NOT", "IGUAL", "DIFF", "MENOR", "MAIOR", "MAIOR_IGUAL", "MENOR_IGUAL", 
			"SOMA", "SUBTRACAO", "MULTIPLICACAO", "DIVISAO", "RECEBA", "IF", "ELSE", 
			"WHILE", "RETURN", "NEW", "TK_INT", "TK_FLOAT", "TK_STRING", "TK_CHAR", 
			"CLASS", "PRINT", "SCAN", "ID", "ESPACO", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public BlocoStartContext blocoStart() {
			return getRuleContext(BlocoStartContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gramaticaParser.EOF, 0); }
		public List<DeclaracaoClasseContext> declaracaoClasse() {
			return getRuleContexts(DeclaracaoClasseContext.class);
		}
		public DeclaracaoClasseContext declaracaoClasse(int i) {
			return getRuleContext(DeclaracaoClasseContext.class,i);
		}
		public List<DeclaracaoFuncaoContext> declaracaoFuncao() {
			return getRuleContexts(DeclaracaoFuncaoContext.class);
		}
		public DeclaracaoFuncaoContext declaracaoFuncao(int i) {
			return getRuleContext(DeclaracaoFuncaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(66);
				declaracaoClasse();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 614180323328L) != 0)) {
				{
				{
				setState(72);
				declaracaoFuncao();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			blocoStart();
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoClasseContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(gramaticaParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode L_CHAVE() { return getToken(gramaticaParser.L_CHAVE, 0); }
		public TerminalNode R_CHAVE() { return getToken(gramaticaParser.R_CHAVE, 0); }
		public List<CorpoClasseContext> corpoClasse() {
			return getRuleContexts(CorpoClasseContext.class);
		}
		public CorpoClasseContext corpoClasse(int i) {
			return getRuleContext(CorpoClasseContext.class,i);
		}
		public DeclaracaoClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoClasse; }
	}

	public final DeclaracaoClasseContext declaracaoClasse() throws RecognitionException {
		DeclaracaoClasseContext _localctx = new DeclaracaoClasseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracaoClasse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CLASS);
			setState(82);
			match(ID);
			setState(83);
			match(L_CHAVE);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 614180323328L) != 0)) {
				{
				{
				setState(84);
				corpoClasse();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(R_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorpoClasseContext extends ParserRuleContext {
		public DeclaracaoVariavelContext declaracaoVariavel() {
			return getRuleContext(DeclaracaoVariavelContext.class,0);
		}
		public CorpoClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpoClasse; }
	}

	public final CorpoClasseContext corpoClasse() throws RecognitionException {
		CorpoClasseContext _localctx = new CorpoClasseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_corpoClasse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			declaracaoVariavel();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoStartContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(gramaticaParser.START, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public BlocoStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocoStart; }
	}

	public final BlocoStartContext blocoStart() throws RecognitionException {
		BlocoStartContext _localctx = new BlocoStartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_blocoStart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(START);
			setState(95);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode L_CHAVE() { return getToken(gramaticaParser.L_CHAVE, 0); }
		public TerminalNode R_CHAVE() { return getToken(gramaticaParser.R_CHAVE, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(L_CHAVE);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1027168272384L) != 0)) {
				{
				{
				setState(98);
				comando();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(R_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public DeclaracaoVariavelContext declaracaoVariavel() {
			return getRuleContext(DeclaracaoVariavelContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public EstruturaWhileContext estruturaWhile() {
			return getRuleContext(EstruturaWhileContext.class,0);
		}
		public EstruturaIfContext estruturaIf() {
			return getRuleContext(EstruturaIfContext.class,0);
		}
		public ComandoPrintContext comandoPrint() {
			return getRuleContext(ComandoPrintContext.class,0);
		}
		public ComandoScanContext comandoScan() {
			return getRuleContext(ComandoScanContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comando);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				declaracaoVariavel();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				atribuicao();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				estruturaWhile();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				estruturaIf();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				comandoPrint();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				comandoScan();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVariavelContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode PONTOV() { return getToken(gramaticaParser.PONTOV, 0); }
		public TerminalNode RECEBA() { return getToken(gramaticaParser.RECEBA, 0); }
		public NovaInstanciaContext novaInstancia() {
			return getRuleContext(NovaInstanciaContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVariavel; }
	}

	public final DeclaracaoVariavelContext declaracaoVariavel() throws RecognitionException {
		DeclaracaoVariavelContext _localctx = new DeclaracaoVariavelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracaoVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			tipo();
			setState(115);
			match(ID);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RECEBA) {
				{
				setState(116);
				match(RECEBA);
				setState(119);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEW:
					{
					setState(117);
					novaInstancia();
					}
					break;
				case NUM_INT:
				case NUM_FLOAT:
				case STRING:
				case CHAR:
				case L_PARENTESE:
				case ID:
					{
					setState(118);
					expressao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(123);
			match(PONTOV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public AcessoContext acesso() {
			return getRuleContext(AcessoContext.class,0);
		}
		public TerminalNode RECEBA() { return getToken(gramaticaParser.RECEBA, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode PONTOV() { return getToken(gramaticaParser.PONTOV, 0); }
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			acesso();
			setState(126);
			match(RECEBA);
			setState(127);
			expressao();
			setState(128);
			match(PONTOV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstruturaWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(gramaticaParser.WHILE, 0); }
		public TerminalNode L_PARENTESE() { return getToken(gramaticaParser.L_PARENTESE, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode R_PARENTESE() { return getToken(gramaticaParser.R_PARENTESE, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public EstruturaWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturaWhile; }
	}

	public final EstruturaWhileContext estruturaWhile() throws RecognitionException {
		EstruturaWhileContext _localctx = new EstruturaWhileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_estruturaWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(WHILE);
			setState(131);
			match(L_PARENTESE);
			setState(132);
			condicao();
			setState(133);
			match(R_PARENTESE);
			setState(134);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstruturaIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(gramaticaParser.IF, 0); }
		public TerminalNode L_PARENTESE() { return getToken(gramaticaParser.L_PARENTESE, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode R_PARENTESE() { return getToken(gramaticaParser.R_PARENTESE, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public List<EstruturaElsifContext> estruturaElsif() {
			return getRuleContexts(EstruturaElsifContext.class);
		}
		public EstruturaElsifContext estruturaElsif(int i) {
			return getRuleContext(EstruturaElsifContext.class,i);
		}
		public EstruturaElseContext estruturaElse() {
			return getRuleContext(EstruturaElseContext.class,0);
		}
		public EstruturaIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturaIf; }
	}

	public final EstruturaIfContext estruturaIf() throws RecognitionException {
		EstruturaIfContext _localctx = new EstruturaIfContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_estruturaIf);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(IF);
			setState(137);
			match(L_PARENTESE);
			setState(138);
			condicao();
			setState(139);
			match(R_PARENTESE);
			setState(140);
			bloco();
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					estruturaElsif();
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(147);
				estruturaElse();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstruturaElsifContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(gramaticaParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(gramaticaParser.IF, 0); }
		public TerminalNode L_PARENTESE() { return getToken(gramaticaParser.L_PARENTESE, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode R_PARENTESE() { return getToken(gramaticaParser.R_PARENTESE, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public EstruturaElsifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturaElsif; }
	}

	public final EstruturaElsifContext estruturaElsif() throws RecognitionException {
		EstruturaElsifContext _localctx = new EstruturaElsifContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_estruturaElsif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ELSE);
			setState(151);
			match(IF);
			setState(152);
			match(L_PARENTESE);
			setState(153);
			condicao();
			setState(154);
			match(R_PARENTESE);
			setState(155);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstruturaElseContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(gramaticaParser.ELSE, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public EstruturaElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturaElse; }
	}

	public final EstruturaElseContext estruturaElse() throws RecognitionException {
		EstruturaElseContext _localctx = new EstruturaElseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_estruturaElse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(ELSE);
			setState(158);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicaoContext extends ParserRuleContext {
		public List<CondicaoAndContext> condicaoAnd() {
			return getRuleContexts(CondicaoAndContext.class);
		}
		public CondicaoAndContext condicaoAnd(int i) {
			return getRuleContext(CondicaoAndContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(gramaticaParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(gramaticaParser.OR, i);
		}
		public CondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicao; }
	}

	public final CondicaoContext condicao() throws RecognitionException {
		CondicaoContext _localctx = new CondicaoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condicao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			condicaoAnd();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(161);
				match(OR);
				setState(162);
				condicaoAnd();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicaoAndContext extends ParserRuleContext {
		public List<CondicaoNotContext> condicaoNot() {
			return getRuleContexts(CondicaoNotContext.class);
		}
		public CondicaoNotContext condicaoNot(int i) {
			return getRuleContext(CondicaoNotContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(gramaticaParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(gramaticaParser.AND, i);
		}
		public CondicaoAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicaoAnd; }
	}

	public final CondicaoAndContext condicaoAnd() throws RecognitionException {
		CondicaoAndContext _localctx = new CondicaoAndContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_condicaoAnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			condicaoNot();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(169);
				match(AND);
				setState(170);
				condicaoNot();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicaoNotContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(gramaticaParser.NOT, 0); }
		public CondicaoNotContext condicaoNot() {
			return getRuleContext(CondicaoNotContext.class,0);
		}
		public CondicaoPrimariaContext condicaoPrimaria() {
			return getRuleContext(CondicaoPrimariaContext.class,0);
		}
		public CondicaoNotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicaoNot; }
	}
